# test_task

./: CMakeLists.txt  README.md  main.cpp
include/: Runner.h  Time.h  client.h  clientState.h  computerClub.h  eventReader.h  formatException.h  table.h
include/events/: errorEvent.h  event.h  eventID.h  userEvent.h  userTableEvent.h
src/: Runner.cpp  Time.cpp  client.cpp  computerClub.cpp  eventReader.cpp  formatException.cpp  main.cpp  table.cpp
src/events/: errorEvent.cpp  event.cpp  userEvent.cpp  userTableEvent.cpp
tests/: test.cpp  testCorrectness.cpp  testInputValidation.cpp
